<resources>
    <string name="app_name">ProTips</string>
    <string name="company_email" translatable="false">protips@gmail.com</string>
    <string name="company_whats_app" translatable="false">+55 (99) 98110-2438</string>
    <string name="facebook_app_id" translatable="false">560218498115674</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb560218498115674</string>
    <string name="_0" translatable="false">0</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="_00_00_01_jan" translatable="false">00:00 01/jan</string>
    <string name="_00_00000_0000" translatable="false">+55 (__) _____–____</string>
    <string name="_01_01_2000" translatable="false">__/__/____</string>
    <string name="_exclamação" translatable="false">!</string>
    <string name="_mais" translatable="false">+</string>
    <string name="_menos" translatable="false">-</string>
    <string name="email" translatable="false">Email</string>
    <string name="ex_123456" translatable="false">ex: 123456</string>
    <string name="filiado" translatable="false">Filiado</string>
    <string name="filiados" translatable="false">Filiados</string>
    <string name="green" translatable="false">Green</string>
    <string name="link" translatable="false">Link</string>
    <string name="protips" translatable="false">PROTIPS</string>
    <string name="red" translatable="false">Red</string>
    <string name="tipname" translatable="false">TipName</string>
    <string name="tipster" translatable="false">Tipster</string>
    <string name="tipsters" translatable="false">Tipsters</string>
    <string name="whats_app" translatable="false">WhatsApp</string>
    <string name="asc" translatable="false">asc</string>
    <string name="dsc" translatable="false">dsc</string>
    <string name="titulo_perfil">MEU PERFIL</string>
    <string name="titulo_meus_filiados">MEUS FILIADOS</string>
    <string name="titulo_notificacoes">NOTIFICAÇÕES</string>
    <string name="titulo_filiados">ENCONTRE TIPSTERS</string>
    <string name="titulo_meus_tipsters">MEUS TIPSTERS</string>
    <string name="titulo_feed" translatable="false">FEED</string>
    <string name="titulo_meus_seguidores">MEUS SEGUIDORES</string>
    <string name="titulo_seguindo">SEGUINDO</string>
    <string name="titulo_contatos">CONTATOS</string>
    <string name="titulo_conversas">CONVERSAS</string>
    <string name="titulo_batepapo">BATEPAPO</string>
    <string name="titulo_criar_tip">Criar Tip</string>
    <string name="titulo_edit_user">EDITAR PERFIL</string>
    <string name="titulo_preferencias">PREFERÊNCIAS</string>
    <string name="titulo_g_inicio">Inicio</string>
    <string name="nav_titulo_inicio">Início</string>
    <string name="nav_titulo_perfil">Perfil</string>
    <string name="titulo_g_solicitacoes">Solicitações</string>
    <string name="nav_titulo_notificacoes">Notificações</string>
    <string name="nav_titulo_pesquisa" translatable="false">Tipsters</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_pesquisa">Pesquisar</string>
    <string name="menu_add_contato">Adicionar Contato</string>
    <string name="menu_batepapo">Batepapo</string>
    <string name="menu_postar_feed">Fazer uma postagem</string>
    <string name="menu_settings">Configurações</string>
    <string name="submenu">Outras opções</string>
    <string name="aceitar">Aceitar</string>
    <string name="ajuda">Ajuda</string>
    <string name="atencao">Atenção</string>
    <string name="baixar">Baixar</string>
    <string name="bom">Bom</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="campeonato">Campeonato</string>
    <string name="campeonato_">CAMPEONATO</string>
    <string name="cancelar">Cancelar</string>
    <string name="categoria">Categoria</string>
    <string name="conta">CONTA</string>
    <string name="criar">CRIAR</string>
    <string name="criar_tip">CRIAR TIP</string>
    <string name="descricao">Descrição…</string>
    <string name="descricao_">DESCRIÇÃO…</string>
    <string name="editar">Editar</string>
    <string-array name="esporte">
        <item>Esporte</item>
        <item>Badminton</item>
        <item>Baisebol</item>
        <item>Basquete</item>
        <item>Boxe/MMA</item>
        <item>Ciclismo</item>
        <item>Corrida de Cavalos</item>
        <item>Corrida de Galgos</item>
        <item>Cricket</item>
        <item>Dardos</item>
        <item>Futebol</item>
        <item>Futebol Americano</item>
        <item>Golfe</item>
        <item>Handbol</item>
        <item>Hóquei no Gelo</item>
        <item>Loto</item>
        <item>Rugby League</item>
        <item>Rugby Union</item>
        <item>Sinuca</item>
        <item>Speedway</item>
        <item>Tênis</item>
        <item>Tênis de Mesa</item>
        <item>Trolting</item>
        <item>Voleybol</item>
    </string-array>
    <string name="esporte_">ESPORTE</string>
    <string name="esportes">Esportes</string>
    <string-array name="estado">
        <item>Acre</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string name="excluindo">Excluindo</string>
    <string name="excluir">Excluir</string>
    <string name="fechar">Fechar</string>
    <string name="horario">Horário</string>
    <string name="imagem">Imagem</string>
    <string name="informacao">Informação</string>
    <string name="legenda">Legenda</string>
    <string name="linha">Linha</string>
    <string name="login">LOGIN</string>
    <string name="maximo">Máximo</string>
    <string-array name="mercado">
        <item>Mercado</item>
        <item>Empates</item>
        <item>Escanteios</item>
        <item>Live</item>
        <item>ML</item>
    </string-array>
    <string name="mercado_">MERCADO</string>
    <string name="mercados">Mercados</string>
    <string name="minimo">Mínimo</string>
    <string name="nao">Não</string>
    <string name="nascimento">Nascimento</string>
    <string name="nome">Nome</string>
    <string name="odd">Odd</string>
    <string name="odd_maxima">Odd Máxima</string>
    <string name="odd_minima">Odd Mínima</string>
    <string name="odd_maxima_">ODD MÁXIMA</string>
    <string name="odd_minima_">ODD MÍNIMA</string>
    <string name="ok">OK</string>
    <string name="ou">OU</string>
    <string name="pendente">Pendente</string>
    <string name="postar">Postar</string>
    <string name="postar_">POSTAR</string>
    <string name="preferencias">Preferências</string>
    <string-array name="privacidade">
        <item>Público</item>
        <item>Privado</item>
    </string-array>
    <string name="ruim">Ruim</string>
    <string name="remover">Remover</string>
    <string name="recusar">Recusar</string>
    <string name="salvar">Salvar</string>
    <string name="seguir">Seguir</string>
    <string name="senha">Senha</string>
    <string name="sim">Sim</string>
    <string name="solicitar">Solicitar</string>
    <string name="telefone">Telefone</string>
    <string name="titulo">Titulo</string>
    <string name="titulo_">TÍTULO</string>
    <string name="unidades_">UNIDADES</string>
    <string name="usuario">Usuário</string>
    <string name="voltar">Voltar</string>
    <string name="seu_nome">Seu nome</string>
    <string-array name="orderBy">
        <item>Ranking</item>
        <item>Name</item>
        <item>Green</item>
        <item>Red</item>
        <item>Posts</item>
    </string-array>
    <string name="seu_email">Seu email</string>
    <string name="odd_atual">Odd Atual</string>
    <string name="sua_senha">Sua senha</string>
    <string name="novo_poste">Novo Tip</string>
    <string name="odd_atual_">ODD ATUAL</string>
    <string name="em_analize">Em análise</string>
    <string name="abrir_link">Abrir link</string>
    <string name="texto_aqui">Texto aqui</string>
    <string name="postar_tip">POSTAR TIP</string>
    <string name="tip_publico">Tip público</string>
    <string name="tip_publico_">TIP PÚBLICA</string>
    <string name="novos_postes">Novos Tips</string>
    <string name="seu_tipname">SEU TIPNAME</string>
    <string name="txt_entre_com">Entre com</string>
    <string name="dados_outros">Outros dados</string>
    <string name="enviar_email">Enviar email</string>
    <string name="bem_vindo_ao">Bem vindo ao</string>
    <string name="posts_no_perfil">MEU PERFIL</string>
    <string name="email_enviado">Email enviado</string>
    <string name="anexar_imagem_">ANEXAR IMAGEM</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="enviar_codigo">Enviar o código</string>
    <string name="data_incorreta">Data incorreta</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="remover_item">Remover este item?</string>
    <string name="nome_do_tipster">Nome do Tipster</string>
    <string name="numero_invalido">Número inválido</string>
    <string name="perfil_usuario_categoria">Sou um</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="login_cancelado">Login Cancelado</string>
    <string name="sem_atualizacao">Sem atualização</string>
    <string name="tip_voto_removido">Voto removido</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="msg_post_excluido">Post excluído</string>
    <string name="registrar_numero">Registrar número</string>
    <string name="TipName_invalido">Tipname inválido</string>
    <string name="tip_voto_bom">Tip marcado como BOM</string>
    <string name="campo_obrigatório">Campo obrigatório</string>
    <string name="faca_sua_postagem">Faça sua postagem</string>
    <string name="popup_caixa_de_texto">Escreva aqui..</string>
    <string name="tip_voto_ruim">Tip marcado como RUIM</string>
    <string name="enviar_novo_email">Enviar novo email</string>
    <string name="deseja_prosseguir">Deseja prosseguir?</string>
    <string name="email_invalido">Este email é inválido</string>
    <string name="more_info">Mais Informações do Tipster</string>
    <string name="idade_minima">A idade mínima é 18 anos</string>
    <string name="selecione_esporte">Selecione um esporte</string>
    <string name="selecione_mercado">Selecione um mercado</string>
    <string name="salve_primeiro">Salve os dados primeiro</string>
    <string name="carregando_a_imagem">Carregando a imagem</string>
    <string name="tipName_obrigatório">TipName obrigatório</string>
    <string name="msg_dados_salvos">Dados Salvos com sucesso</string>
    <string name="quero_ser_um_filiado">Quero ser um Filiado</string>
    <string name="filiado_aceito">Sua solicitação foi aceita</string>
    <string name="quero_ser_um_tipster">Quero ser um Tipster</string>
    <string name="cancelar_solicitacao">Cancelar solicitação</string>
    <string name="horario_minimo">HORÁRIO MÍNIMO PARA ENTRADA</string>
    <string name="horario_maximo">HORÁRIO MÁXIMO PARA ENTRADA</string>
    <string name="post_foto_obrigatorio">A Foto é obrigatória</string>
    <string name="verificar_atualizacao">Verificar atualização</string>
    <string name="post_erro">Ocorreu um erro ao postar seu Tip</string>
    <string name="conversa_caixa_de_texto">Digite sua mensagem</string>
</resources>