<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_lateral_batepapo"
            android:icon="@drawable/ic_chat"
            android:visible="false"
            android:title="@string/menu_batepapo" />
    </group>

    <item android:title="@string/submenu">
        <menu>
            <item
                android:id="@+id/menu_lateral_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/menu_lateral_logout"
                android:icon="@drawable/ic_account_box"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
