<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="false"
    tools:context=".activity.PostActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/new_post_table_padding"
            android:stretchColumns="0,1">

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo_"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                style="@style/EditText.NewPost" />

            <TextView
                android:id="@+id/tv_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/new_post_item_margin"
                android:text="@string/anexar_imagem_"
                style="@style/EditText.NewPost" />

            <EditText
                android:id="@+id/et_texto"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginTop="@dimen/new_post_item_margin"
                android:gravity="top"
                android:hint="@string/descricao_"
                android:maxLength="200"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                style="@style/EditText.NewPost" />

            <TextView
                android:id="@+id/tv_popup_length"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/new_post_item_background"/>

            <TableRow android:layout_marginTop="@dimen/new_post_item_margin">

                <EditText
                    android:id="@+id/et_odd_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/odd_minima_"
                    android:layout_marginEnd="@dimen/item_table_margin"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    style="@style/EditText.NewPost" />

                <EditText
                    android:id="@+id/et_odd_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/odd_maxima_"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    style="@style/EditText.NewPost" />

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/new_post_item_margin">

                <EditText
                    android:id="@+id/et_odd_atual"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/odd_atual_"
                    android:layout_marginEnd="@dimen/item_table_margin"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    style="@style/EditText.NewPost" />

                <EditText
                    android:id="@+id/et_unidades"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/unidades_"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    style="@style/EditText.NewPost" />

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/new_post_item_margin">

                <EditText
                    android:id="@+id/et_horario_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_table_margin"
                    android:textAlignment="center"
                    android:text="@string/_00_00"
                    android:hint="@string/_00_00"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    style="@style/EditText.NewPost"/>

                <EditText
                    android:id="@+id/et_horario_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:hint="@string/_00_00"
                    android:textAlignment="center"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    style="@style/EditText.NewPost" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/horario_minimo"
                    android:textSize="@dimen/text_min_size"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/horario_maximo"
                    android:textSize="@dimen/text_min_size"
                    android:textAlignment="center" />

            </TableRow>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/new_post_item_background"/>

            <TableRow android:layout_marginTop="@dimen/new_post_item_margin">

                <AutoCompleteTextView
                    android:id="@+id/et_esporte"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_table_margin"
                    android:hint="@string/esporte_"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    style="@style/EditText.NewPost" />

                <AutoCompleteTextView
                    android:id="@+id/et_mercado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/mercado_"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    style="@style/EditText.NewPost" />

            </TableRow>

            <EditText
                android:id="@+id/et_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/new_post_item_margin"
                android:hint="@string/link"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                style="@style/EditText.NewPost" />

            <TableRow android:layout_marginTop="@dimen/new_post_item_margin">

                <AutoCompleteTextView
                    android:id="@+id/et_campeonato"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/item_table_margin"
                    android:hint="@string/campeonato_"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    style="@style/EditText.NewPost" />

                <CheckBox
                    android:id="@+id/cb_tip_publico"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/new_post_item_background"
                    android:text="@string/tip_publico_"/>

            </TableRow>

            <View
                android:layout_width="0dp"
                android:layout_height="100dp"/>

        </TableLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/tv_postar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:text="@string/postar_"
        android:background="@drawable/ic_postar"/>

</RelativeLayout>