<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="false"
    android:background="@color/colorPrimaryLight"
    tools:context=".activity.PerfilActivity">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="3dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/text_dark"
            android:textSize="15sp"
            android:text="@string/voltar"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/text_dark"
                android:textSize="15sp"
                android:text="@string/seguir"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:visibility="gone"
                android:textColor="@color/text_dark"
                android:textSize="15sp"
                android:text="@string/seguir"
                tools:ignore="RelativeOverlap" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150sp"
        android:layout_below="@+id/rl_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-75dp"
        app:cardCornerRadius="75dp">

        <ImageView
            android:id="@+id/iv_foto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_circulo_primary_light"
            android:contentDescription="@string/nome"
            android:src="@drawable/ic_person_dark" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_below="@+id/cardView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/dados_pessoais"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/login_item_margin"
                android:background="@drawable/bg_circulo_branco"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/nome"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_nome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_circulo_branco"
                    android:hint="@string/seu_nome"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:importantForAutofill="no"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/login_item_margin"
                android:background="@drawable/bg_circulo_branco"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tipname"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_tipname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_circulo_branco"
                    android:hint="@string/seu_tipname"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_telefone_container"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/login_item_margin"
                android:background="@drawable/bg_circulo_branco"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/telefone"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_telefone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_circulo_branco"
                    android:hint="@string/_00_00000_0000"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_email_container"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/login_item_margin"
                android:background="@drawable/bg_circulo_branco"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_circulo_branco"
                    android:hint="@string/seu_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_item_margin"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/dados_outros"/>

            <EditText
                android:id="@+id/et_info"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/bg_circulo_branco"
                android:layout_marginTop="@dimen/login_item_margin"
                android:hint="@string/descricao"
                android:padding="15dp"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:importantForAutofill="no"  />

            <LinearLayout
                android:id="@+id/ll_tipster_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_item_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/esportes"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_esportes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:background="@color/text_dark"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_item_margin"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/mercados"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_mercados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="@dimen/login_item_margin"
                    android:padding="5dp"
                    android:background="@color/text_dark"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </LinearLayout>

        </TableLayout>

    </ScrollView>

</RelativeLayout>